--- a/HouseRentingSystem/Views/House/All.cshtml
+++ b/HouseRentingSystem/Views/House/All.cshtml
@@ -58,7 +58,7 @@
 <div class="row mb-5"> 
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start"> 
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)" 
-        asp-controller="Houses" 
+        asp-controller="House" 
         asp-action="All" 
         asp-route-currentPage="@previousPage" 
         asp-route-category="@Model.Category" 
@@ -73,7 +73,7 @@
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end"> 
         <a class="btn btn-primary 
            @(shouldButtonBeDisabled ? "disabled" : string.Empty)" 
-           asp-controller="Houses" 
+           asp-controller="House" 
            asp-action="All" 
            asp-route-currentPage="@(Model.CurrentPage + 1)" 
            asp-route-category="@Model.Category" 
@@ -92,4 +92,4 @@
     { 
         <partial name="_HousePartial" model="@house" /> 
     }
-</div>/>
+</div>
