--- a/HouseRentingSystem/Views/Home/Index.cshtml
+++ b/HouseRentingSystem/Views/Home/Index.cshtml
@@ -71,12 +71,12 @@
 @section Scripts {
     <script>
         $('#statistics-button').on('click', ev => {
-            $.get('/api/statistics', (data) => {
-                    $.('#total-houses'),text(data.totalHouses + "Houses");
-                    $.('#total-rents'),text(data.totalRents + "Rents");
-                    $.('#statistics').removeClass('d-none');
-                    $.('#statistics-button').hide();
-            })
-        })
+            $.get('https://localhost:7207/api/statistics', (data) => {
+                $('#total-houses').text(data.totalHouses + "Houses");
+                $('#total-rents').text(data.totalRents + "Rents");
+                $('#statistics').removeClass('d-none');
+                $('#statistics-button').hide();
+            });
+        });
     </script>
 }
