Adding URL Protection

--- a/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
+++ b/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
@@ -9,7 +9,7 @@
             <h6> Price Per Month: <b>@String.Format("{0:f2}", Model.PricePerMonth) BGN</b> </h6> 
             <h6>(@(Model.IsRented ? "Rented" : "Not Rented"))</h6> 
             <br /> 
-            <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success btn-sm">Details</a> 
+            <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id" asp-route-information="@Model.GetInformation()" class="btn btn-success btn-sm">Details</a> 
             @if (this.User.Identity.IsAuthenticated) 
             {
                 <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-sm">Edit</a> 
