--- a/HouseRentingSystem/Views/Home/Index.cshtml
+++ b/HouseRentingSystem/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>
                         <a class="btn btn-primary" asp-controller="House" asp-action="Details"
-                       asp-route-id="@house.Id"> @house.Title</a>
+                       asp-route-id="@house.Id" asp-route-information="@house.GetInformation()"> @house.Title</a>
                     </h5>
                 </div>
             </div>
@@ -71,9 +71,9 @@
 @section Scripts {
     <script>
         $('#statistics-button').on('click', ev => {
-            $.get('https://localhost:7207/api/statistics', (data) => {
-                $('#total-houses').text(data.totalHouses + "Houses");
-                $('#total-rents').text(data.totalRents + "Rents");
+                $.get('/api/statistics', (data) => {
+                $('#total-houses').text(data.totalHouses + " Houses");
+                $('#total-rents').text(data.totalRents + " Rents");
                 $('#statistics').removeClass('d-none');
                 $('#statistics-button').hide();
             });
