--- a/HouseRentingSystem/Views/_ViewImports.cshtml
+++ b/HouseRentingSystem/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using HouseRentingSystem.Models
 @using HouseRentingSystem.Core.Models.House
 @using HouseRentingSystem.Core.Models.Agent
+@using HouseRentingSystem.Core.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
