--- a/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
+++ b/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
@@ -9,21 +9,21 @@
             <h6> Price Per Month: <b>@String.Format("{0:f2}", Model.PricePerMonth) BGN</b> </h6> 
             <h6>(@(Model.IsRented ? "Rented" : "Not Rented"))</h6> 
             <br /> 
-            <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id" asp-route-information="@Model.GetInformation()" class="btn btn-success btn-sm">Details</a> 
+            <a asp-area="" asp-controller="House" asp-action="Details" asp-route-id="@Model.Id" asp-route-information="@Model.GetInformation()" class="btn btn-success btn-sm">Details</a> 
             @if (this.User.Identity.IsAuthenticated) 
             {
-                <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-sm">Edit</a> 
-                <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger btn-sm">Delete</a> 
+                <a asp-area="" asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-sm">Edit</a> 
+                <a asp-area="" asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger btn-sm">Delete</a> 
                 <p></p>
                 @if (!Model.IsRented) 
                 {
-                    <form class="input-group-sm" asp-controller="House" asp-action="Rent" asp-route-id="@Model.Id" method="post"> 
+                    <form class="input-group-sm" asp-area="" asp-controller="House" asp-action="Rent" asp-route-id="@Model.Id" method="post"> 
                         <input class="btn btn-primary btn-sm" type="submit" value="Rent" /> 
                     </form> 
                 } 
                 else 
                 {
-                    <form asp-controller="House" asp-action="Leave" asp-route-id="@Model.Id" method="post"> 
+                    <form asp-area="" asp-controller="House" asp-action="Leave" asp-route-id="@Model.Id" method="post"> 
                         <input class="btn btn-primary btn-sm" type="submit" value="Leave" /> 
                     </form> 
                 } 
